bug fix: next button shifting

--- a/styles/_right-side.scss
+++ b/styles/_right-side.scss
@@ -57,7 +57,7 @@
     }
 
     img {
-        width: 35%;
+        height: 170px;
     }
 
 }
